# Cpp_start

./: .gitignore  README.md
basicExercices/: CMakeLists.txt  step.md
basicExercices/src/: main.cpp
